jenkins-deploy/jenkins-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jjachurachavez/jenkins-with-ansible:1.0.0
    spec:
      containers:
      - name: jenkins
        image: 
        ports:
        - name: http
          containerPort: 8080
        - name : jnlp
          containerPort: 50000
        volumeMounts:
        - name: jenkins-nfs-pvc
          mountPath: "/var/jenkins_home"
      securityContext:
        fsGroup: 1000
      volumes:
      - name: jenkins-nfs-pvc
        persistentVolumeClaim:
          claimName: jenkins-nfs-pvc
