jenkins-deploy/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: jenkins-service
  name: jenkins-service
spec:
  ports:
    - name: jnlp
      port: 50000
      targetPort: 50000
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: jenkins
  type: ClusterIP
