jenkins-deploy/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: jenkins-ingress
spec:
  rules:
  - host: besptest.falabella.net
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-service
          servicePort: 8080
